# ai4se-harness

./: .gitignore  AGENT_LOG.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/ai4se_harness/: __init__.py  cli.py  config.py  context.py  credentials.py  feedback.py  guardrail.py  loop.py  memory.py  models.py  parser.py  stop_judge.py
src/ai4se_harness/llm/: __init__.py  base.py  live.py  mock.py
src/ai4se_harness/tools/: __init__.py  file_tools.py  registry.py  shell_tool.py  test_tool.py
tests/: __init__.py  test_config.py  test_context.py  test_credentials.py  test_demo.py  test_feedback.py  test_guardrail.py  test_llm.py  test_loop.py  test_memory.py  test_models.py  test_parser.py  test_stop_judge.py  test_tools.py
workspace/: .gitkeep
